test/files/neg/macro-keyword-object2.check
macro-keyword-object2.scala:2: error: identifier expected but 'macro' found.
  object macro
         ^
one error found
